--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,6 @@ body {
       background-color: #024e76;
       border: none;
       padding: 10px 20px;
-      font-size 16px;
+      font-size: 16px;
   }
   /* HERO STYLES END */
